--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,8 @@
-name: dbt_observability
+name: app_environment
 channels:
   - snowflake
 dependencies:
-  - python=3.11
-  - snowflake-snowpark-python
-  - streamlit
-  - pandas
-  - altair
+  - snowflake-snowpark-python=
+  - streamlit=
+  - pandas=
+  - altair=
